<resources>
    <string name="app_name">FitnessApp</string>
    <string name="sign_in_string">Sign In</string>
    <string name="sign_in_enter_username">Username</string>
    <string name="sign_in_username">Username…</string>
    <string name="sign_in_enter_password">Password</string>
    <string name="sign_in_password">Password...</string>
    <string name="sign_in_button">Sign In</string>
    <string name="menu_eat">Calories</string>
    <string name="menu_home">Exercises</string>
    <string name="ccal">CCal</string>
    <string name="add_to_eat">Add</string>
    <string name="settings">Settings</string>
    <string name="calculate">Calculate</string>
    <string name="remove">remove</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="sex">Sex:</string>
    <string name="calories">Calories:</string>
    <string name="add_food">Add food</string>
    <string name="age">Age:</string>
    <string name="Activity">Activity:</string>
    <string name="calc">Calculate</string>
    <string name="enterWeight">Enter your weight...</string>
    <string name="enterHeight">Enter your height...</string>
    <string name="enterAge">Enter your age...</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="maintence">Your calories maintence: </string>



</resources>