<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateActivity">

    <FrameLayout
        android:id="@+id/fl_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_app_backgoroud"
        android:layout_above="@id/bottom_navigation"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_app_backgoroud"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:text="@string/calculate"
            android:textColor="@color/fitness_500"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingVertical="15dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/fitness_700"
                android:orientation="horizontal"
                android:id="@+id/radiogroup">


                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

            </RadioGroup>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:hint="@string/enterHeight"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:inputType="number"


                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:hint="@string/enterWeight"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:inputType="number"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enterAge"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="25dp"
                android:inputType="number"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Activity"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/activities" />



        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="@color/fitness_200"/>

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc"
            android:onClick="onCalc"
            />

        <TextView
            android:id="@+id/Maintenance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Maintenance"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp" />


    </LinearLayout>


</RelativeLayout>


