<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_app_backgoroud"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:text="@string/my_profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/fitness_500"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/settings_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textStyle="bold"
                android:text="Alexandra Gess"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/settings_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="82"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/settings_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="179"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/settings_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Мужской"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/settings_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="2900"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="@color/fitness_200"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:text="@string/language"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/fitness_500"
            />



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:outlineSpotShadowColor="@color/fitness_500">


            <RadioButton
                android:id="@+id/radio_rus"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:text="@string/russian"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"
              />

            <RadioButton
                android:id="@+id/radio_en"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/english"
                android:textStyle="bold"

                android:textSize="16sp"/>

        </RadioGroup>

    </LinearLayout>

</FrameLayout>